@@ -2,3 +2,5 @@
 ## The cluttermm development team.
 
 SUBDIRS = reference
+
+EXTRA_DIST = Makefile_web.am_fragment
